# JARVIS-V1--PERSONAL-AI-ASSISTENT

./: .gitignore  .pylintrc  COMPLETION_SUMMARY.md  CONTRIBUTING.md  PROJECT_AUDIT_REPORT.md  REMAINING_WORK.md  TEST_SUITE_REPORT.md  bulk_import.py  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  ui.py  wake_word.py
.claude/: settings.local.json
actions/: browser_control.py  code_helper.py  computer_settings.py  desktop.py  dev_agent.py  emotion_detector.py  face_recognition.py  flight_finder.py  maps.py  news_fetcher.py  open_app.py  screen_processor.py  send_message.py  youtube_video.py
agent/: chain_runner.py  enhanced_recovery.py  error_handler.py  error_recovery.py  executor.py  followup_detector.py  metrics.py  metrics_analytics.py  pc_guardian.py  planner.py  proactive.py  task_queue.py
config/: __init__.py
core/: echo_cancellation.py  emotion_detector.py  prompt.txt  tool_declarations.py  turn_manager.py
docs/: ACTIONS.md  API_REFERENCE.md  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PHASE1_IMPLEMENTATION.md  PHASE1_SUMMARY.md  ROADMAP.md  SESSION_IMPROVEMENTS.md  SETUP.md  TEST_CHECKLIST.md  VISION.md
gui/: __init__.py  app.py
memory/: conversation_history.py  file_store.py  followups.py  knowledge_graph.py  memory_manager.py  mood_tracker.py  semantic_store.py
tests/: README.md  __init__.py  conftest.py  test_actions.py  test_executor.py  test_executor_recovery.py  test_executor_recovery_corrected.py  test_integration.py  test_memory.py  test_planner.py  test_planner_edge_cases.py  test_planner_multi_step.py
tools/: check_emotion_import.py  check_endpoints.py  check_fer.py  check_genai.py  dump_whatsapp_uia.py  install_hooks.py  test_chain.py  (+3 more)
(+8 files in other folders)
