[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-v1"
version = "0.2.0"
description = "Advanced desktop AI assistant with voice control, browser automation, and code execution"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jarvis Contributors", email = "dev@jarvis.local"}
]
keywords = ["ai", "voice", "automation", "agent", "desktop"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "pylint>=3.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | build
  | dist
  | \.eggs
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_chrome: marks tests that require Chrome browser",
]

[tool.coverage.run]
source = ["actions", "agent", "core", "memory"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
    "if TYPE_CHECKING:",
    "^\\s*pass\\s*$",
]
